--- a/page2.html
+++ b/page2.html
@@ -75,7 +75,7 @@
     }
   </style>
 </head>
-<body>
+<body class="gradient-bg">
   <audio id="bg-music" autoplay loop>
   <source src="audio1.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
