--- a/page3.html
+++ b/page3.html
@@ -130,7 +130,7 @@
     }
   </style>
 </head>
-<body>
+<body class="gradient-bg scroll-page">
 
 <!-- Background Music -->
 <audio id="bg-music" autoplay loop>
