--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       justify-content: center;
       align-items: center;
       padding: 20px;
-      overflow: auto; /* Allow scrolling if needed */
+      overflow: hidden; /* Allow scrolling if needed */
     }
 
     #startScreen {
