--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Local overrides specific to index so other pages remain unaffected -->
   <style>
-    /* Ensure index start screen centers properly even if style.css is shared across pages */
+    /* Lock screen to viewport, no scroll */
     body.gradient-bg {
-      min-height: 100vh;
+      height: 100vh;
+      width: 100vw;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 20px;
-      overflow: hidden; /* Allow scrolling if needed */
+      flex-direction: column;
+      overflow: hidden; /* 🚫 No scroll */
+      margin: 0;
+      padding: 0;
+      position: relative;
     }
 
     #startScreen {
@@ -25,6 +28,7 @@
       flex-direction: column;
       align-items: center;
       gap: 18px;
+      animation: fadeIn 1.2s ease forwards;
     }
 
     .teddy-wrapper {
@@ -35,21 +39,21 @@
     }
 
     #teddy {
-      width: 260px;
+      width: 240px;
       border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-      transition: transform 0.2s ease;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.35);
+      transition: transform 0.3s ease, filter 0.3s ease;
       display: block;
     }
 
-    .teddy-wrapper:active #teddy,
-    .teddy-wrapper:focus #teddy {
-      transform: scale(0.98);
+    .teddy-wrapper:hover #teddy {
+      transform: scale(1.05);
+      filter: brightness(1.05);
     }
 
     #tapText {
       position: relative;
-      margin-top: -40px;
+      margin-top: -36px;
       font-size: 1.3rem;
       font-weight: bold;
       color: white;
@@ -60,7 +64,7 @@
 
     @keyframes pulse {
       0% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.06); opacity: 0.9; }
+      50% { transform: scale(1.08); opacity: 0.9; }
       100% { transform: scale(1); opacity: 1; }
     }
 
@@ -69,7 +73,7 @@
       font-size: 6rem;
       font-weight: bold;
       color: #fff;
-      text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+      text-shadow: 2px 2px 12px rgba(0,0,0,0.4);
       animation: bounceIn 0.6s ease forwards;
       text-align: center;
     }
@@ -79,7 +83,25 @@
       to { opacity: 1; transform: scale(1); }
     }
 
-    /* make sure audio controls are hidden but accessible for debugging (you can remove controls attr later) */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Background floating hearts for beauty */
+    .heart {
+      position: absolute;
+      bottom: -20px;
+      color: rgba(255,255,255,0.7);
+      font-size: 1.5rem;
+      animation: floatUp 6s linear infinite;
+    }
+
+    @keyframes floatUp {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-110vh) scale(1.3); opacity: 0; }
+    }
+
     audio#bg-music { display:none; }
   </style>
 </head>
@@ -97,11 +119,20 @@
       <img id="teddy" src="teddy.png" alt="Teddy Bear">
       <div id="tapText">💖 Tap Me 💖</div>
     </div>
-    <p style="margin-top: 8px; font-size: 1.05rem; color: #111;">A surprise awaits 🎁</p>
+    <p style="margin-top: 8px; font-size: 1.05rem; color: #fff; text-shadow: 1px 1px 6px rgba(0,0,0,0.5);">
+      A surprise awaits 🎁
+    </p>
   </div>
 
   <!-- ⏳ Countdown -->
   <div id="countdown" aria-live="polite"></div>
+
+  <!-- Floating background hearts -->
+  <div class="heart" style="left:10%;">💖</div>
+  <div class="heart" style="left:30%; animation-delay:2s;">💕</div>
+  <div class="heart" style="left:50%; animation-delay:4s;">💗</div>
+  <div class="heart" style="left:70%; animation-delay:1s;">💓</div>
+  <div class="heart" style="left:90%; animation-delay:3s;">💞</div>
 
   <!-- Scripts -->
   <script src="script.js"></script>
@@ -112,17 +143,13 @@
     const teddyWrapper = document.getElementById("teddyWrapper");
 
     function startSequence() {
-      // Play music after user interaction (browser allows it)
       if (music.paused) {
         music.play().catch(e => console.warn("Autoplay prevented:", e));
       }
-
-      // Visual confetti
       if (typeof launchConfetti === "function") {
         launchConfetti();
       }
 
-      // Hide start and show countdown
       startScreen.style.display = "none";
       countdownEl.style.display = "block";
 
@@ -136,8 +163,6 @@
         }
         if (count < 0) {
           clearInterval(timer);
-
-          // Smooth fade out before redirect
           document.body.style.transition = "opacity 1s ease";
           document.body.style.opacity = 0;
           setTimeout(() => {
@@ -147,7 +172,6 @@
       }, 1000);
     }
 
-    // Allow click OR keyboard "Enter/Space" to start (accessibility)
     teddyWrapper.addEventListener("click", startSequence);
     teddyWrapper.addEventListener("keydown", (e) => {
       if (e.key === "Enter" || e.key === " ") {
