--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,123 @@
   <meta charset="UTF-8">
   <title>Happy Birthday 🎂</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    /* Lock screen to viewport */
+    body.gradient-bg {
+      height: 100dvh; /* ✅ dynamic viewport height for mobile */
+      width: 100vw;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+      position: relative;
+    }
+
+    section {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 22px;
+      padding: 0 16px;
+      max-width: 95%;
+      animation: fadeIn 1.2s ease forwards;
+    }
+
+    h1 {
+      font-size: clamp(28px, 8vw, 60px);
+      font-weight: 700;
+      color: #ff4d6d;
+      -webkit-text-stroke: 1px black;
+      text-stroke: 1px black;
+      text-shadow:
+        3px 3px 8px rgba(0,0,0,0.5),
+        -2px -2px 6px rgba(0,0,0,0.4);
+      line-height: 1.2;
+    }
+
+    h2 {
+      font-size: clamp(18px, 4.5vw, 30px);
+      color: #fff;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+      font-weight: 500;
+      line-height: 1.4;
+    }
+
+    button {
+      margin-top: 15px;
+      padding: 14px 36px;
+      background: linear-gradient(135deg, #ff4d6d, #ff80a1);
+      border: none;
+      color: white;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 1.4rem;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.25);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Floating background hearts */
+    .heart {
+      position: absolute;
+      bottom: -20px;
+      color: rgba(255,255,255,0.7);
+      font-size: 1.6rem;
+      animation: floatUp 6s linear infinite;
+    }
+
+    @keyframes floatUp {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-110vh) scale(1.3); opacity: 0; }
+    }
+
+    audio#bg-music { display:none; }
+  </style>
+</head>
+<body class="gradient-bg">
+  <!-- Background Music -->
+  <audio id="bg-music" autoplay loop>
+    <source src="audio1.mp3" type="audio/mpeg">
+  </audio>
+
+  <section>
+    <h1>🎂 Happy Birthday Bachaa 🎂</h1>
+    <h2>Wishing you endless happiness,<br> smiles and love today and always 💖</h2>
+    <button onclick="window.location.href='page3.html'">Next</button>
+  </section>
+
+  <!-- Floating hearts for background effect -->
+  <div class="heart" style="left:15%;">💖</div>
+  <div class="heart" style="left:40%; animation-delay:2s;">💕</div>
+  <div class="heart" style="left:65%; animation-delay:4s;">💓</div>
+  <div class="heart" style="left:85%; animation-delay:1s;">💞</div>
+
+  <script src="script.js"></script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Happy Birthday 🎂</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       display: flex;
