--- a/page2.html
+++ b/page2.html
@@ -7,202 +7,75 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    /* Lock screen to viewport */
     body.gradient-bg {
-      height: 100dvh; /* ✅ dynamic viewport height for mobile */
+      height: 100dvh;
       width: 100vw;
       margin: 0;
-      padding: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      overflow: hidden;
-      font-family: 'Poppins', sans-serif;
       text-align: center;
-      position: relative;
+      font-family: 'Poppins', sans-serif;
+      overflow: hidden; /* 🔒 no scrolling */
+      padding: 20px;
+      background: linear-gradient(135deg, #ffdde1, #ee9ca7);
     }
 
     section {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 22px;
-      padding: 0 16px;
-      max-width: 95%;
-      animation: fadeIn 1.2s ease forwards;
+      max-width: 90%;
     }
 
     h1 {
       font-size: clamp(28px, 8vw, 60px);
-      font-weight: 700;
-      color: #ff4d6d;
-      -webkit-text-stroke: 1px black;
-      text-stroke: 1px black;
-      text-shadow:
-        3px 3px 8px rgba(0,0,0,0.5),
-        -2px -2px 6px rgba(0,0,0,0.4);
-      line-height: 1.2;
+      font-weight: bold;
+      background: linear-gradient(45deg, #ff4d6d, #ff80ab);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.25);
+      margin-bottom: 15px;
     }
 
     h2 {
-      font-size: clamp(18px, 4.5vw, 30px);
-      color: #fff;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
-      font-weight: 500;
+      font-size: clamp(18px, 5vw, 28px);
+      color: #333;
       line-height: 1.4;
+      margin-bottom: 25px;
     }
 
     button {
-      margin-top: 15px;
-      padding: 14px 36px;
-      background: linear-gradient(135deg, #ff4d6d, #ff80a1);
+      padding: 14px 30px;
+      background: #ff4d6d;
       border: none;
       color: white;
       border-radius: 30px;
       cursor: pointer;
       font-weight: bold;
-      font-size: 1.4rem;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.25);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Floating background hearts */
-    .heart {
-      position: absolute;
-      bottom: -20px;
-      color: rgba(255,255,255,0.7);
-      font-size: 1.6rem;
-      animation: floatUp 6s linear infinite;
-    }
-
-    @keyframes floatUp {
-      0% { transform: translateY(0) scale(1); opacity: 1; }
-      100% { transform: translateY(-110vh) scale(1.3); opacity: 0; }
-    }
-
-    audio#bg-music { display:none; }
-  </style>
-</head>
-<body class="gradient-bg">
-  <!-- Background Music -->
-  <audio id="bg-music" autoplay loop>
-    <source src="audio1.mp3" type="audio/mpeg">
-  </audio>
-
-  <section>
-    <h1>🎂 Happy Birthday Bachaa 🎂</h1>
-    <h2>Wishing you endless happiness,<br> smiles and love today and always 💖</h2>
-    <button onclick="window.location.href='page3.html'">Next</button>
-  </section>
-
-  <!-- Floating hearts for background effect -->
-  <div class="heart" style="left:15%;">💖</div>
-  <div class="heart" style="left:40%; animation-delay:2s;">💕</div>
-  <div class="heart" style="left:65%; animation-delay:4s;">💓</div>
-  <div class="heart" style="left:85%; animation-delay:1s;">💞</div>
-
-  <script src="script.js"></script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Happy Birthday 🎂</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      min-height: 100vh;
-      padding: 20px;
-      font-family: 'Poppins', sans-serif;
-      background-color: #fff0f5;
-    }
-
-    section {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      max-width: 90%;
-    }
-
-    h1 {
-  font-size: 18vw;
-  color: #ff4d6d;
-  -webkit-text-stroke: 1px black; /* black border */
-  text-stroke: 1px black;
-  text-shadow:
-    4px 4px 8px rgba(0, 0, 0, 0.6),
-    -2px -2px 8px rgba(0, 0, 0, 0.6);
-}
-
-    p {
-      font-size: 5vw; /* ✅ Responsive paragraph size */
-      color: #333;
-    }
-
-    h2 {
-      font-size: 4vw; /* ✅ Responsive paragraph size */
-    }
-
-    button {
-      margin-top: 15px;
-      padding: 14px 30px;
-      background: #ff4d6d;
-      border: none;
-      color: white;
-      border-radius: 25px;
-      cursor: pointer;
-      font-weight: bold;
-      font-size: 2rem;
-      transition: background-color 0.3s ease;
-      width: 100%;
-      max-width: 300px;
+      font-size: 1.2rem;
+      transition: transform 0.2s ease, background 0.3s ease;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.25);
     }
 
     button:hover {
       background: #e6004c;
+      transform: scale(1.05);
     }
 
-    /* ✅ Optional: Cap font size on larger screens */
-    @media (min-width: 768px) {
-      h1 {
-        font-size: 48px;
-      }
-
-      p {
-        font-size: 35px;
-      }
+    button:active {
+      transform: scale(0.97);
     }
   </style>
 </head>
 <body class="gradient-bg">
+  <!-- Background Music (only once) -->
   <audio id="bg-music" autoplay loop>
-  <source src="audio1.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
-  <section>
-    <h1>🎂 Happy Birthday My Love 🎂</h1>
-    <h2>Wishing you endless happiness, smiles <br> and love today and always 💖</h2>
-    <button onclick="window.location.href='page3.html'">Next </button>
-  </section>
+    <source src="audio1.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 
-  <script src="script.js"></script>
+  <section>
+    <h1>🎂 Happy Birthday Bachaa 🎂</h1>
+    <h2>Wishing you endless happiness, smiles <br> and love today and always 💖</h2>
+    <button onclick="window.location.href='page3.html'">Next</button>
+  </section>
 </body>
 </html>
