--- a/page2.html
+++ b/page2.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Happy Birthday 🎂</title>
-  <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Font Import (Optional but nice) -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
-    body.gradient-bg {
+    body {
       height: 100dvh;
       width: 100vw;
       margin: 0;
@@ -16,7 +18,7 @@
       align-items: center;
       text-align: center;
       font-family: 'Poppins', sans-serif;
-      overflow: hidden; /* 🔒 no scrolling */
+      overflow: hidden;
       padding: 20px;
       background: linear-gradient(135deg, #ffdde1, #ee9ca7);
     }
@@ -65,8 +67,8 @@
     }
   </style>
 </head>
-<body class="gradient-bg">
-  <!-- Background Music (only once) -->
+<body>
+  <!-- Background Music -->
   <audio id="bg-music" autoplay loop>
     <source src="audio1.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
