--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
   <title>Happy Birthday 🎂</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Google Font -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
@@ -15,15 +15,18 @@
       box-sizing: border-box;
     }
 
+    html, body {
+      height: 100%;
+      width: 100%;
+      font-family: 'Poppins', sans-serif;
+      overflow: hidden;
+    }
+
     body {
-      height: 100vh;
-      width: 100vw;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
-      font-family: 'Poppins', sans-serif;
-      overflow: hidden;
       padding: 20px;
       background: linear-gradient(270deg, #ffdde1, #ee9ca7, #ffd6d6, #fcb0b3);
       background-size: 800% 800%;
@@ -38,15 +41,15 @@
     }
 
     section {
-      max-width: 90%;
+      max-width: 600px;
       z-index: 2;
     }
 
     h1 {
-      font-size: clamp(32px, 7vw, 64px);
+      font-size: clamp(28px, 8vw, 60px);
       font-family: 'Pacifico', cursive;
       color: #fff;
-      text-shadow: 3px 3px 8px rgba(0,0,0,0.3);
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
       margin-bottom: 15px;
       animation: popIn 1s ease-out forwards;
     }
@@ -57,11 +60,11 @@
     }
 
     h2 {
-      font-size: clamp(20px, 5vw, 28px);
+      font-size: clamp(18px, 5vw, 26px);
       color: #fff;
       line-height: 1.6;
       margin-bottom: 30px;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
       animation: fadeIn 1.5s ease forwards;
     }
 
@@ -71,16 +74,16 @@
     }
 
     button {
-      padding: 14px 30px;
+      padding: 14px 28px;
       background: #ff4d6d;
       border: none;
       color: white;
       border-radius: 30px;
       cursor: pointer;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1rem;
       transition: all 0.3s ease;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.25);
     }
 
     button:hover {
@@ -95,9 +98,10 @@
     /* Floating Emojis */
     .emoji {
       position: absolute;
-      font-size: 2rem;
-      opacity: 0.8;
+      font-size: 1.5rem;
+      opacity: 0.75;
       animation: float 10s linear infinite;
+      pointer-events: none;
     }
 
     @keyframes float {
@@ -113,6 +117,23 @@
         opacity: 0;
       }
     }
+
+    /* Responsive Tuning */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 34px;
+      }
+      h2 {
+        font-size: 18px;
+      }
+      button {
+        font-size: 1rem;
+        padding: 12px 24px;
+      }
+      .emoji {
+        font-size: 1.2rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -122,25 +143,26 @@
     Your browser does not support the audio element.
   </audio>
 
-  <!-- Floating Emojis -->
+  <!-- Floating Emojis (Script-generated) -->
   <script>
     const emojis = ["🎂", "🎉", "💖", "🥳", "🎈", "🌸"];
-    const count = 25;
+    const emojiCount = 20;
 
-    for (let i = 0; i < count; i++) {
+    for (let i = 0; i < emojiCount; i++) {
       const emoji = document.createElement("div");
       emoji.classList.add("emoji");
       emoji.textContent = emojis[Math.floor(Math.random() * emojis.length)];
       emoji.style.left = Math.random() * 100 + "vw";
       emoji.style.animationDelay = Math.random() * 10 + "s";
-      emoji.style.fontSize = (Math.random() * 1.5 + 1.5) + "rem";
+      emoji.style.fontSize = (Math.random() * 1.2 + 1.2) + "rem";
       document.body.appendChild(emoji);
     }
   </script>
 
+  <!-- Birthday Message -->
   <section>
     <h1>🎂 Happy Birthday Bachaa 🎂</h1>
-    <h2>May your day be filled with joy, magic, hugs, cake, and endless love 💖 You deserve all the happiness in the world!</h2>
+    <h2>Wishing you endless happiness, smiles and love today and always 💖</h2>
     <button onclick="window.location.href='page3.html'">Next</button>
   </section>
 </body>
