--- a/page2.html
+++ b/page2.html
@@ -44,7 +44,7 @@
       z-index: 2;
     }
 
-    h1 {
+/*     h1 {
       font-size: clamp(28px, 8vw, 60px);
       font-family: 'Pacifico', cursive;
       color: #fff;
@@ -60,7 +60,33 @@
       margin-bottom: 30px;
       max-width: 90%;
     }
+ */
+    h1 {
+  font-size: clamp(28px, 8vw, 60px);
+  font-family: 'Pacifico', cursive;
+  color: #fff;
+  margin-bottom: 20px;
+  text-shadow: 2px 2px 6px rgba(0,0,0,0.3);
+  padding: 10px 20px;
+  border: 2px solid black;
+  border-radius: 12px;
+  background-color: rgba(0, 0, 0, 0.05);
+  display: inline-block;
+}
 
+h2 {
+  font-size: clamp(18px, 5vw, 26px);
+  color: #fff;
+  line-height: 1.6;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+  margin-bottom: 30px;
+  padding: 10px 15px;
+  border: 1.5px solid black;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.05);
+  display: inline-block;
+  max-width: 90%;
+}
     button {
       padding: 14px 28px;
       background: #ff4d6d;
