--- a/page2.html
+++ b/page2.html
@@ -61,32 +61,33 @@
       max-width: 90%;
     }
  */
-    h1 {
+   h1 {
   font-size: clamp(28px, 8vw, 60px);
   font-family: 'Pacifico', cursive;
-  color: #fff;
+  color: #ffecf2;
   margin-bottom: 20px;
-  text-shadow: 2px 2px 6px rgba(0,0,0,0.3);
-  padding: 10px 20px;
-  border: 2px solid black;
-  border-radius: 12px;
-  background-color: rgba(0, 0, 0, 0.05);
-  display: inline-block;
+  text-shadow:
+    -1px -1px 0 #000,  
+     1px -1px 0 #000,
+    -1px  1px 0 #000,
+     1px  1px 0 #000,
+     2px  2px 6px rgba(0,0,0,0.3);
 }
 
 h2 {
   font-size: clamp(18px, 5vw, 26px);
   color: #fff;
   line-height: 1.6;
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   margin-bottom: 30px;
-  padding: 10px 15px;
-  border: 1.5px solid black;
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.05);
-  display: inline-block;
+  text-shadow:
+    -1px -1px 0 #000,  
+     1px -1px 0 #000,
+    -1px  1px 0 #000,
+     1px  1px 0 #000,
+     2px  2px 4px rgba(0,0,0,0.2);
   max-width: 90%;
 }
+
     button {
       padding: 14px 28px;
       background: #ff4d6d;
