--- a/page2.html
+++ b/page2.html
@@ -61,11 +61,25 @@
       max-width: 90%;
     }
  */
-   h1 {
+/*    h1 {
   font-size: clamp(28px, 8vw, 60px);
   font-family: 'Pacifico', cursive;
   color: #ffecf2;
   margin-bottom: 20px;
+  text-shadow:
+    -1px -1px 0 #000,  
+     1px -1px 0 #000,
+    -1px  1px 0 #000,
+     1px  1px 0 #000,
+     2px  2px 6px rgba(0,0,0,0.3);
+} */
+
+    h1 {
+  font-size: clamp(22px, 6vw, 44px);
+  font-family: 'Pacifico', cursive;
+  color: #ffecf2;
+  margin-bottom: 20px;
+  white-space: nowrap; /* 💡 Prevent line break */
   text-shadow:
     -1px -1px 0 #000,  
      1px -1px 0 #000,
