--- a/page2.html
+++ b/page2.html
@@ -73,13 +73,31 @@
      1px  1px 0 #000,
      2px  2px 6px rgba(0,0,0,0.3);
 } */
-
+/*     
     h1 {
-  font-size: clamp(20px, 5vw, 40px);
+  font-size: clamp(22px, 6vw, 44px);
   font-family: 'Pacifico', cursive;
   color: #ffecf2;
   margin-bottom: 20px;
   white-space: nowrap; /* 💡 Prevent line break */
+/*   text-shadow:
+    -1px -1px 0 #000,  
+     1px -1px 0 #000,
+    -1px  1px 0 #000,
+     1px  1px 0 #000,
+     2px  2px 6px rgba(0,0,0,0.3); */
+}  
+     */
+    h1 {
+  font-size: clamp(18px, 6vw, 42px);
+  font-family: 'Pacifico', cursive;
+  color: #ffecf2;
+  margin-bottom: 20px;
+
+  white-space: normal;
+  word-break: break-word;
+  text-align: center;
+
   text-shadow:
     -1px -1px 0 #000,  
      1px -1px 0 #000,
