--- a/page2.html
+++ b/page2.html
@@ -73,39 +73,20 @@
      1px  1px 0 #000,
      2px  2px 6px rgba(0,0,0,0.3);
 } */
-/*     
-    h1 {
+    
+  h1 {
   font-size: clamp(22px, 6vw, 44px);
   font-family: 'Pacifico', cursive;
   color: #ffecf2;
   margin-bottom: 20px;
   white-space: nowrap; /* 💡 Prevent line break */
-/*   text-shadow:
-    -1px -1px 0 #000,  
-     1px -1px 0 #000,
-    -1px  1px 0 #000,
-     1px  1px 0 #000,
-     2px  2px 6px rgba(0,0,0,0.3); */
-}  
-     */
- h1 {
-  font-size: clamp(20px, 5vw, 40px);
-  font-family: 'Pacifico', cursive;
-  color: #ffecf2;
-  margin-bottom: 20px;
-  text-align: center;
-  
-  white-space: normal;       /* ✅ Allow wrapping */
-  word-break: break-word;    /* ✅ Prevent overflow */
-
   text-shadow:
     -1px -1px 0 #000,  
      1px -1px 0 #000,
     -1px  1px 0 #000,
      1px  1px 0 #000,
-     2px  2px 6px rgba(0,0,0,0.3);  /* ✅ Original shadow */
-}
-
+     2px  2px 6px rgba(0,0,0,0.3); 
+}  
 
 h2 {
   font-size: clamp(18px, 5vw, 26px);
