--- a/page2.html
+++ b/page2.html
@@ -74,21 +74,21 @@
      2px  2px 6px rgba(0,0,0,0.3);
 } */
     
-/*   h1 {
+  h1 {
   font-size: clamp(22px, 6vw, 44px);
   font-family: 'Pacifico', cursive;
   color: #ffecf2;
   margin-bottom: 20px;
   white-space: nowrap; /* 💡 Prevent line break */
-/*   text-shadow:
+  text-shadow:
     -1px -1px 0 #000,  
      1px -1px 0 #000,
     -1px  1px 0 #000,
      1px  1px 0 #000,
-     2px  2px 6px rgba(0,0,0,0.3);  */
-}   */
+     2px  2px 6px rgba(0,0,0,0.3); 
+}  
 
-h1 {
+/* h1 {
   font-size: clamp(22px, 6vw, 44px);
   font-family: 'Pacifico', cursive;
   color: #ffecf2;
@@ -106,7 +106,7 @@ h1 {
      1px  1px 0 #000,
      2px  2px 6px rgba(0,0,0,0.3); 
 }
-
+ */
 h2 {
   font-size: clamp(18px, 5vw, 26px);
   color: #fff;
